--- a/assets/scss/base.scss
+++ b/assets/scss/base.scss
@@ -1,8 +1,44 @@
-.container-fluid {
-  width: 100%;
+/**
+ * Base LAYOUT
+ */
+html, body {
+  margin: 0;
+  padding: 0;
 }
 
 
 
+/**
+ * Typo
+ */
+html {
+  font-size: 13px;
+  font-family: Arial, Verdana, sans-serif;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  margin: 0;
+  padding: 0;
+  font-size: 100%;
+}
+
+h1 {
+  font-size: 18px;
+  font-weight: bold;
+  text-align: center;
+}
+
+h2 {
+  font-size: 16px;
+  font-weight: bold;
+  text-align: left;
+}
+
+h3 {
+  font-size: 14px;
+  font-weight: normal;
+  text-align: center;
+}
 
 
+@import "header";
