links CRUD done + style

--- a/assets/scss/_content.scss
+++ b/assets/scss/_content.scss
@@ -13,6 +13,10 @@ $icone: sprite-map('icone/*.png');
    background: $color3;
 }
 
+.nb-links {
+  color: $link;
+}
+
 .link-list {
   padding: 10px;
 }
@@ -42,6 +46,7 @@ $icone: sprite-map('icone/*.png');
   }
 }
 
+
 .link {
   .link-name {
     display: inline-block;
@@ -51,15 +56,22 @@ $icone: sprite-map('icone/*.png');
     color: $link;
   }
 
+  .link-delete {
+    margin-left: 20px;
+    font-size: 10px;
+    cursor: pointer;
+  }
+
   .link-tags {
     display: block;
-    margin-top: 3px;
+    margin: 3px 0;
   }
 
   .tag {
+    padding: 2px 3px;
+    margin-right: 3px;
     font-size: 10px;
     border: 1px solid $color1;
-    padding: 2px 3px;
     @include border-radius(3px);
 
     &:hover {
@@ -67,6 +79,28 @@ $icone: sprite-map('icone/*.png');
       border: $color2;
       background: $color1;
     }
+  }
+}
+
+.display-list {
+  .link {
+    border-bottom: 1px solid $link;
+    padding: 5px;
+  }
+}
+
+.display-grid {
+  .link {
+    border: 1px solid $link;
+    padding: 5px;
+    margin: 5px;
+    display: inline-block;
+    width: 20%;
+  }
+
+  .link-delete {
+    float: right;
+    margin: 0;
   }
 }
 
