Public dir for prod

--- a/views/home/index.ejs
+++ b/views/home/index.ejs
@@ -42,7 +42,7 @@
                     ---= link.label ---
                 </span>
                 <span class="link-url">
-                    <a class="href ext" href="---= link.url ---">---= link.url ---</a>
+                    <a class="href ext" href="---= link.url ---" target="_blank">---= link.url ---</a>
                 </span>
 
                 <span class="link-delete" data-link-id="---= link.id ---">X</span>
