Compile assets before deploying

--- a/.tmp/public/styles/base.css
+++ b/.tmp/public/styles/base.css
@@ -175,27 +175,47 @@ input {
 }
 
 /* line 16, ../../../assets/scss/_content.scss */
+#top-wrapper {
+  position: fixed;
+  top: 60px;
+  right: 0;
+  left: 0;
+  height: 120px;
+  z-index: 1;
+}
+
+/* line 25, ../../../assets/scss/_content.scss */
+#list-wrapper {
+  position: fixed;
+  top: 110px;
+  bottom: 25px;
+  left: 0;
+  right: 0;
+  overflow: auto;
+}
+
+/* line 34, ../../../assets/scss/_content.scss */
 .nb-links {
   color: #e9e9e9;
 }
 
-/* line 20, ../../../assets/scss/_content.scss */
+/* line 38, ../../../assets/scss/_content.scss */
 .link-list {
   padding: 10px;
 }
 
-/* line 24, ../../../assets/scss/_content.scss */
+/* line 42, ../../../assets/scss/_content.scss */
 .toolbar {
   padding: 10px;
   background: #333333;
   color: white;
 }
-/* line 29, ../../../assets/scss/_content.scss */
+/* line 47, ../../../assets/scss/_content.scss */
 .toolbar li {
   display: inline-block;
 }
 
-/* line 34, ../../../assets/scss/_content.scss */
+/* line 52, ../../../assets/scss/_content.scss */
 .add-link-form {
   display: block;
   padding: 10px;
@@ -206,34 +226,34 @@ input {
   -o-transition: all 0.3s;
   transition: all 0.3s;
 }
-/* line 42, ../../../assets/scss/_content.scss */
+/* line 60, ../../../assets/scss/_content.scss */
 .add-link-form.height0 {
   height: 0px;
   padding: 0;
   overflow: hidden;
 }
 
-/* line 51, ../../../assets/scss/_content.scss */
+/* line 69, ../../../assets/scss/_content.scss */
 .link .link-name {
   display: inline-block;
 }
-/* line 54, ../../../assets/scss/_content.scss */
+/* line 72, ../../../assets/scss/_content.scss */
 .link .link-url {
   display: inline-block;
   color: #e9e9e9;
 }
-/* line 59, ../../../assets/scss/_content.scss */
+/* line 77, ../../../assets/scss/_content.scss */
 .link .link-delete {
   margin-left: 20px;
   font-size: 10px;
   cursor: pointer;
 }
-/* line 65, ../../../assets/scss/_content.scss */
+/* line 83, ../../../assets/scss/_content.scss */
 .link .link-tags {
   display: block;
   margin: 3px 0;
 }
-/* line 70, ../../../assets/scss/_content.scss */
+/* line 88, ../../../assets/scss/_content.scss */
 .link .tag {
   padding: 2px 3px;
   margin-right: 3px;
@@ -245,20 +265,20 @@ input {
   -o-border-radius: 3px;
   border-radius: 3px;
 }
-/* line 77, ../../../assets/scss/_content.scss */
+/* line 95, ../../../assets/scss/_content.scss */
 .link .tag:hover {
   color: white;
   border: #333333;
   background: #3e3e3e;
 }
 
-/* line 86, ../../../assets/scss/_content.scss */
+/* line 104, ../../../assets/scss/_content.scss */
 .display-list .link {
   border-bottom: 1px solid #e9e9e9;
   padding: 5px;
 }
 
-/* line 93, ../../../assets/scss/_content.scss */
+/* line 111, ../../../assets/scss/_content.scss */
 .display-grid .link {
   border: 1px solid #e9e9e9;
   padding: 5px;
@@ -266,13 +286,13 @@ input {
   display: inline-block;
   width: 20%;
 }
-/* line 101, ../../../assets/scss/_content.scss */
+/* line 119, ../../../assets/scss/_content.scss */
 .display-grid .link-delete {
   float: right;
   margin: 0;
 }
 
-/* line 109, ../../../assets/scss/_content.scss */
+/* line 127, ../../../assets/scss/_content.scss */
 a.ext:after {
   content: "";
   background: url('../img/icone-s7df7b01cfc.png') 0 -20px no-repeat;
@@ -282,25 +302,25 @@ a.ext:after {
   margin-left: 3px;
 }
 
-/* line 121, ../../../assets/scss/_content.scss */
+/* line 139, ../../../assets/scss/_content.scss */
 .btn-group .btn {
   margin-right: 0;
   margin-left: 0;
   float: left;
   border-right-width: 0;
 }
-/* line 127, ../../../assets/scss/_content.scss */
+/* line 145, ../../../assets/scss/_content.scss */
 .btn-group .btn:last-child {
   border-right-width: 1px;
 }
 
-/* line 133, ../../../assets/scss/_content.scss */
+/* line 151, ../../../assets/scss/_content.scss */
 .btn-list {
   width: 20px;
   height: 20px;
   position: relative;
 }
-/* line 140, ../../../assets/scss/_content.scss */
+/* line 158, ../../../assets/scss/_content.scss */
 .btn-list:after {
   content: "";
   position: absolute;
@@ -311,13 +331,13 @@ a.ext:after {
   left: 8px;
 }
 
-/* line 153, ../../../assets/scss/_content.scss */
+/* line 171, ../../../assets/scss/_content.scss */
 .btn-grid {
   width: 20px;
   height: 20px;
   position: relative;
 }
-/* line 160, ../../../assets/scss/_content.scss */
+/* line 178, ../../../assets/scss/_content.scss */
 .btn-grid:after {
   content: "";
   position: absolute;
